force-app/main/default/objects/Work_Schedule__c/Work_Schedule__c.object-meta.xml
<CustomObject>
    <description>This object is used to manage the work timings for a practitioner within a facility.</description>
    <label>Work Schedule</label>
    <nameField>
        <displayFormat>WSN No-{0000}</displayFormat>
        <label>Work Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>