force-app/main/default/objects/Work_Schedule__c/fields/Appointment_Types__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Types__c</fullName>
    <description>This is used to store the different types of appoitments.</description>
    <label>Appointment Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A90</fullName>
                <label>Consultation</label>
            </value>
            <value>
                <fullName>A91</fullName>
                <label>Follow up Visit</label>
            </value>
            
        </valueSetDefinition>
    </valueSet>
</CustomField>