force-app/main/default/objects/Work_Schedule__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Captures the end date of the work schedule.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>