force-app/main/default/objects/Work_Schedule__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Indicates the end date and time of the work schedule.</description>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>