force-app/main/default/objects/Work_Schedule__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Represents the end time of the work schedule.</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>