force-app/main/default/objects/Work_Schedule__c/fields/override_existing_availability__c.field-meta.xml
<CustomField>
    <fullName>override_existing_availability__c</fullName>
    <description>Flags whether the work schedule overrides existing availability.</description>
    <defaultValue>false</defaultValue>
    <label>Override Existing Availability</label>
    <type>Checkbox</type>
</CustomField>