force-app/main/default/objects/Work_Schedule__c/fields/Provider_Location__c.field-meta.xml
<CustomField>
    <fullName>Provider_Location__c</fullName>
    <description>Identifies the location (provider) linked to the work schedule.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Provider__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Template_Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Work Schedule</relationshipLabel>
    <relationshipName>Work_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>