force-app/main/default/objects/Work_Schedule__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Captures the start date of the work schedule.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>