force-app/main/default/objects/Work_Schedule__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Indicates the start date and time of the work schedule.</description>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>