force-app/main/default/objects/Work_Schedule__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Represents the start time of the work schedule.</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>