force-app/main/default/objects/Work_Schedule__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Specifies the time zone for the work schedule.</description>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Africa/Addis_Ababa</fullName>
            </value>
            <value>
                <fullName>Africa/Algiers</fullName>
            </value>
            <value>
                <fullName>Africa/Asmera</fullName>
            </value>
            <value>
                <fullName>Africa/Bangui</fullName>
            </value>
            <value>
                <fullName>Africa/Blantyre</fullName>
            </value>
            <value>
                <fullName>Africa/Brazzaville</fullName>
            </value>
            <value>
                <fullName>Africa/Bujumbura</fullName>
            </value>
            <value>
                <fullName>Africa/Cairo</fullName>
            </value>
            <value>
                <fullName>Africa/Casablanca</fullName>
            </value>
            <value>
                <fullName>Africa/Ceuta</fullName>
            </value>
            <value>
                <fullName>Africa/Dar_es_Salaam</fullName>
            </value>
            <value>
                <fullName>Africa/Djibouti</fullName>
            </value>
            <value>
                <fullName>Africa/Douala</fullName>
            </value>
            <value>
                <fullName>Africa/El_Aaiun</fullName>
            </value>
            <value>
                <fullName>Africa/Gaborone</fullName>
            </value>
            <value>
                <fullName>Africa/Harare</fullName>
            </value>
            <value>
                <fullName>Africa/Johannesburg</fullName>
            </value>
            <value>
                <fullName>Africa/Juba</fullName>
            </value>
            <value>
                <fullName>Africa/Kampala</fullName>
            </value>
            <value>
                <fullName>Africa/Khartoum</fullName>
            </value>
            <value>
                <fullName>Africa/Kigali</fullName>
            </value>
            <value>
                <fullName>Africa/Kinshasa</fullName>
            </value>
            <value>
                <fullName>Africa/Lagos</fullName>
            </value>
            <value>
                <fullName>Africa/Libreville</fullName>
            </value>
            <value>
                <fullName>Africa/Luanda</fullName>
            </value>
            <value>
                <fullName>Africa/Lubumbashi</fullName>
            </value>
            <value>
                <fullName>Africa/Lusaka</fullName>
            </value>
            <value>
                <fullName>Africa/Malabo</fullName>
            </value>
            <value>
                <fullName>Africa/Maputo</fullName>
            </value>
            <value>
                <fullName>Africa/Maseru</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>