force-app/main/default/objects/Work_Schedule__c/fields/Work_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Work_Schedule__c</fullName>
    <description>Represents the self lookup field associated with work schedule.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Schedule</label>
    <referenceTo>Work_Schedule__c</referenceTo>
    <relationshipLabel>Work Schedule</relationshipLabel>
    <relationshipName>Work_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>