force-app/main/default/objects/Work_Schedule__c/recordTypes/Work_Schedule.recordType-meta.xml
<RecordType>
    <fullName>Work_Schedule</fullName>
    <active>true</active>
    <label>Work Schedule</label>
</RecordType>