force-app/main/default/objects/Work_Schedule__c/listViews/Work_Schedule_View.listView-meta.xml
<ListView>
    <fullName>Work_Schedule_View</fullName>
    <columns>NAME</columns>
    <columns>Practitioner_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>Work Schedule View</label>
</ListView>